--- a/power/specialman/special.css
+++ b/power/specialman/special.css
@@ -33,11 +33,108 @@ body{
 .image{
     width: 50%;  
 }
-.details{
+#form {
+    width: 500px;
+    border-radius: 4px;
+    font-size: 12px;
+}
+
+#form h1 {
+    color: #0f2027;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+#form button {
+    padding: 10px;
+    margin-top: 10px;
+    width: 165px;
+    height: 49px;
+    color: white;
+    background-color: rgb(41, 57, 194);
+    border: none;
+    border-radius: 4px;
+    margin-left:11rem;
+    cursor: pointer;
+}
+
+.input-control {
+    display: flex;
+    flex-direction: column;
+}
+
+.input-control input {
+    border: 2px solid #f0f0f0;
+	border-radius: 4px;
+	display: block;
+	font-size: 12px;
+	padding: 10px;
+	width: 100%;
+    height: 30%;
+}
+
+.input-control input:focus {
+    outline: 0;
+    border-color: #09c372;
+}
+
+.input-control.success input {
+    border-color: #0c3523;
+}
+
+.input-control.error input {
+    border-color: #ff3860;
+}
+
+.input-control .error {
+    color: #ff3860;
+    font-size: 9px;
+    height: 13px;
+}
+.container{
     width: 50%;   
+    margin-left: 20%;
+    margin-top: 100px;
 }
 
 
+@media(  max-width: 480px) {
+    
+}
+
+
+@media( max-width: 767px ) {
+    #form {
+        width: 300px;
+        border-radius: 4px;
+        font-size: 9px;
+    }
+    .input-control input {
+        font-size: 9px;
+    }
+}
+/* 
+input{
+    display: block;
+    height: 30px;
+    width: 30rem;
+    margin-bottom: 30px;
+    border-radius: 5px;
+    padding: 5px;
+}
+.btn{
+    background-color: #336699;
+    color: white;
+    text-decoration: none;
+    border: 1px solid transparent;
+    font-weight: bold;
+    padding: 5px 8px;
+    align-content: center;
+}
+
+h1{
+    margin-bottom: 10px;
+} */
 /* 
 
 
